--- a/CosmeticShop/CosmeticShop/Views/Account/Login.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Account/Login.cshtml
@@ -18,6 +18,9 @@
         <input asp-for="RememberMe" />
     </div>
     <div>
+        <a asp-controller="Account" asp-action="ForgotPassword">Забыли пароль?</a>
+    </div>
+    <div>
         <input type="submit" value="Войти" />
     </div>
 </form>
