--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
@@ -1,4 +1,4 @@
-@model IEnumerable<CosmeticShop.Models.Products.ProductContainer>
+﻿@model IEnumerable<CosmeticShop.Models.Products.ProductContainer>
 
 @{
     ViewData["Title"] = "Index";
@@ -7,49 +7,59 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Создать Продукты</a>
+    <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @* @Html.DisplayNameFor(model => model.Cost) *@
-                <p>Набор продуктов</p>
+                @Html.DisplayNameFor(model => model.ProductName)
             </th>
             <th>
-                <p>Продукты</p>
+                @Html.DisplayNameFor(model => model.Cost)
             </th>
             <th>
-                <p>Фотографии</p>
+                @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                <p>Категория</p>
+                @Html.DisplayNameFor(model => model.CreateDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ExpirationDate)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.ProductCategory)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
-            <tr>
-                <td>
-                    <p>@item.ProductName</p>
-                </td>
-                <td>
-                    <a href="">Перейти</a>
-                </td>
-                <td>
-                    <a>Просмотреть</a>
-                </td>
-                <td>
-                    <a>@item.ProductCategory</a>
-                </td>
-                <td>
-                    <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                    <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-                </td>
-            </tr>
-        }
+@foreach (var item in Model) {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductName)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Cost)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Description)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreateDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ExpirationDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ProductCategory.Id)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+            </td>
+        </tr>
+}
     </tbody>
 </table>
