--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
@@ -13,6 +13,11 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <label asp-for="CountProducts" class="control-label"></label>
+                <input asp-for="CountProducts" class="form-control" />
+                <span asp-validation-for="CountProducts" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="ProductName" class="control-label"></label>
                 <input asp-for="ProductName" class="form-control" />
                 <span asp-validation-for="ProductName" class="text-danger"></span>
@@ -39,7 +44,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductCategoryId" class="control-label"></label>
-                <select asp-for="ProductCategoryId" class ="form-control" asp-items="ViewBag.ProductCategoryName"></select>
+                <select asp-for="ProductCategoryId" class ="form-control" asp-items="ViewBag.ProductCategoryId"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
