--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Delete.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Delete.cshtml
@@ -12,6 +12,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CountProducts)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CountProducts)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
         <dd class = "col-sm-10">
@@ -45,7 +51,7 @@
             @Html.DisplayNameFor(model => model.ProductCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductCategory.Id)
+            @Html.DisplayFor(model => model.ProductCategory.Name)
         </dd class>
     </dl>
     
