--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
@@ -11,6 +11,12 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.CountProducts)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.CountProducts)
+        </dd>
+        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ProductName)
         </dt>
         <dd class = "col-sm-10">
@@ -44,7 +50,7 @@
             @Html.DisplayNameFor(model => model.ProductCategory)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ProductCategory.Id)
+            @Html.DisplayFor(model => model.ProductCategory.Name)
         </dd>
     </dl>
 </div>
