--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
@@ -10,8 +10,8 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <form asp-action="Create" enctype="multipart/form-data">
+            <div asp-validation-summary="ModelOnly" class="text-danger" ></div>
             <div class="form-group">
                 <label asp-for="CountProducts" class="control-label"></label>
                 <input asp-for="CountProducts" class="form-control" />
@@ -44,8 +44,35 @@
             </div>
             <div class="form-group">
                 <label asp-for="ProductCategoryId" class="control-label"></label>
-                <select asp-for="ProductCategoryId" class ="form-control" asp-items="ViewBag.ProductCategoryId"></select>
+                <select asp-for="ProductCategoryId" class="form-control" asp-items="ViewBag.ProductCategoryId"></select>
             </div>
+
+            
+            <div>
+                <div>
+                    <label for="countImages">Количество картинок</label>
+                    <input type="number" name="countImages" id="countImages" oninput="displayLoadImagesElements()" />
+                </div>
+
+                <div id="images">
+                </div>
+            </div>
+
+            <script>
+                function displayLoadImagesElements() {
+                    console.log("function called");
+                    var countImages = document.getElementById('countImages').value;
+                    var loadImagesInnerHtml = document.getElementById('images');
+
+                    var html = "";
+                    for (var i = 0; i < countImages; i++) {
+                        html += `<input type="file" name="Pictures[${i}].Image"/>`;
+                    }
+
+                    loadImagesInnerHtml.innerHTML = html;
+                }
+            </script>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
@@ -58,5 +85,5 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
