--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Edit.cshtml
@@ -48,6 +48,33 @@
                 <select asp-for="ProductCategoryId" class="form-control" asp-items="ViewBag.ProductCategoryId"></select>
                 <span asp-validation-for="ProductCategoryId" class="text-danger"></span>
             </div>
+
+
+            <div>
+                <div>
+                    <label for="countImages">Количество картинок</label>
+                    <input type="number" name="countImages" id="countImages" oninput="displayLoadImagesElements(@Model.Pictures)" />
+                </div>
+
+                <div id="images">
+                </div>
+            </div>
+
+            <script>
+                function displayLoadImagesElements() {
+                    console.log("function called");
+                    var countImages = document.getElementById('countImages').value;
+                    var loadImagesInnerHtml = document.getElementById('images');
+
+                    var html = "";
+                    for (var i = 0; i < countImages; i++) {
+                        html += `<input type="file" name="Pictures[${i}].Image"/>`;
+                    }
+
+                    loadImagesInnerHtml.innerHTML = html;
+                }
+            </script>
+
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
