--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Index.cshtml
@@ -25,10 +25,7 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.CreateDate)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ExpirationDate)
+                Срок годности
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.ProductCategory)
@@ -52,9 +49,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.CreateDate)
-            </td>
-            <td>
+                @Html.DisplayFor(modelItem => item.CreateDate) - 
                 @Html.DisplayFor(modelItem => item.ExpirationDate)
             </td>
             <td>
