refactoring Product Creating

--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Details.cshtml
@@ -58,7 +58,7 @@
                 <th>Название</th>
                 <th>Картинка</th>
             </tr>
-            @foreach (var item in Model.Pictures)
+            @foreach (var item in Model.ProductPictures.Pictures)
             {
                 <tr>
                     <td>
