--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
@@ -65,7 +65,8 @@
 
                     var html = "";
                     for (var i = 0; i < countImages; i++) {
-                        html += `<input type="file" name="Pictures[${i}].Image"/>`;
+                        html += `<input type="file" name="ProductPictures.Pictures[${i}].Image"/>`;
+                        html += `<<input type="radio" name="ProductPictures.PreviewNnmber" value="${i}">`;
                     }
 
                     loadImagesInnerHtml.innerHTML = html;
