order product actions add/delete/select count products added

--- a/CosmeticShop/CosmeticShop/Views/Traiding/Details.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Details.cshtml
@@ -73,13 +73,13 @@
     </dl>
 </div>
 <div>
-    <form asp-controller="Orders" asp-action="Add">
+    <form asp-controller="Orders" asp-action="Add" method="POST">
         <input type="number" name="productId" value="@Model.Id" hidden>
         
         <label for="count">Количество</label>
         <input type="number" name="count">
         
-        <label for="add-to-order">добавить в корзину</label>
+        <label for="add-to-order">Добавить в корзину</label>
         <input type="submit" name="add-to-order" value="">
     </form>
     @* <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
