--- a/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Traiding/Index.cshtml
@@ -41,27 +41,36 @@
     <tr>
         <th>
             <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.NameSort)"
-               asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Имя</a>
+                asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Имя</a>
         </th>
         <th>
             <a asp-action="Index" asp-route-sortOrder="@(Model.SortViewModel.CostSort)"
-               asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Цена</a>
+                asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)">Цена</a>
         </th>
     </tr>
     @foreach (var product in Model.Products)
     {
         <tr>
 
-            
+
             <td>
                 @Html.Raw("<img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
-                    + Convert.ToBase64String(product.ProductPictures.GetPreviewPicture().Result) + "\" />")
+            + Convert.ToBase64String(product.ProductPictures.GetPreviewPicture().Result) + "\" />")
             </td>
-            <td>@product.ProductName</td>
-            <td>@product.Cost</td>
-            <td>@product.ProductCategory.Name</td>
             <td>
-                <a asp-action="Details" asp-route-id="@product.Id" >Просмотр</a>
+            @product.ProductName
+            @product.Cost
+            @product.ProductCategory.Name
+            
+                <a asp-action="Details" asp-route-id="@product.Id">Просмотр</a>
+            </td>
+            <td>
+                <form asp-controller="Orders" asp-action="Add" method="POST">
+                    <input type="number" name="productId" value="@product.Id" hidden>
+
+                    <label for="add-to-order">Добавить в корзину</label>
+                    <input type="submit" name="add-to-order" value="">
+                </form>
             </td>
         </tr>
     }
@@ -69,8 +78,8 @@
 @if (Model.PageViewModel.HasPreviousPage)
 {
     <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber - 1)"
-       asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
-       asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn  btn-outline-dark">
+    asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
+    asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn  btn-outline-dark">
         <i class="glyphicon glyphicon-chevron-left"></i>
         Назад
     </a>
@@ -78,8 +87,8 @@
 @if (Model.PageViewModel.HasNextPage)
 {
     <a asp-action="Index" asp-route-page="@(Model.PageViewModel.PageNumber + 1)"
-       asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
-       asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn btn-outline-dark">
+    asp-route-categoryId="@(Model.FilterViewModel.SelectedCategory)"
+    asp-route-sortorder="@(Model.SortViewModel.Current)" class="btn btn-outline-dark">
         Вперед
         <i class="glyphicon glyphicon-chevron-right"></i>
     </a>
