--- a/CosmeticShop/CosmeticShop/Views/Orders/Index.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/Orders/Index.cshtml
@@ -1,10 +1,24 @@
-@model CosmeticShop.Models.Products.Order
+@model CosmeticShop.Models.Products.Order;
 
+<h1>Корзина</h1>
 <table>
-    @foreach (var item in Model.ProductContainers)
+    @foreach (var item in Model.OrderProuctAccountings)
     {
-        <td>
-            <p>@item.ProductName</p>
-        </td>
+        <tr>
+            <td>
+                @Html.Raw("<img style='width:250px; height:250px;' src=\"data:image/jpeg;base64,"
+            + Convert.ToBase64String(item.ProductContainer.ProductPictures.GetPreviewPicture().Result) + "\" />")
+            </td>
+            <td>@item.CountRequiredProducts</td>
+            <td>@item.ProductContainer.ProductName</td>
+            <td>@item.ProductContainer.Cost</td>
+
+            <td>
+                <a asp-controller="Traiding" asp-action="Details" asp-route-id="@item.ProductContainer.Id">Просмотр</a>
+            </td>
+            <td>
+                <a asp-action="Delete" asp-controller="Orders" asp-route-id="@item.ProductContainer.Id">Удалить продукт</a>
+            </td>
+        </tr>
     }
 </table>
