--- a/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
+++ b/CosmeticShop/CosmeticShop/Views/ProductContainers/Create.cshtml
@@ -66,7 +66,7 @@
                     var html = "";
                     for (var i = 0; i < countImages; i++) {
                         html += `<input type="file" name="ProductPictures.Pictures[${i}].Image"/>`;
-                        html += `<<input type="radio" name="ProductPictures.PreviewNnmber" value="${i}">`;
+                        html += `<input type="radio" name="ProductPictures.PreviewNnmber" value="${i}">`;
                     }
 
                     loadImagesInnerHtml.innerHTML = html;
